Fixed text and added intro section

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#intro">Intro</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li> -->
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#bio">Bio</a></li> -->
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a></li> 
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
                 </ul>
@@ -37,26 +37,34 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- Intro-->
-            <section class="resume-section" id="intro">
+            <section style="text-align: center;" class="resume-section" id="intro">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Cole
+                        Cole W.
                         <span class="text-primary">Barbour</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        Audio & Video Production
+                    <div class="subheading mb-5" style="font-size:2.5rem">
+                        Audio & Video
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer who offers audio and video recording, editing and livestreaming services around Boston, MA. He is currently employed as the Assistant Recording Engineer for the Boston Symphony Orchestra, where he works with the BSO, Boston Symphony Chamber Players and Boston Pops. Mr. Barbour has a bachelor in music and a master in sound recording from McGill University, Montreal, Canada. He is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble to create high quality concert recordings and livestreams. In his spare time, Mr. Barbour enjoys playing music with friends, cycling and photography.</p>
-                    <!-- <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <p class="lead mb-5">Professional audio and video production<br/>High-quality recording, editing and livestreaming services</p>
+               <!-- <div class="social-icons"> -->
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
-                    </div> -->
+                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
+                        <!-- <a class="social-icon" href="#"><i class="fas fa-headphones-alt"></i></a>
+                        <i class="fas fa-headphones-alt"></i> -->
+                    <!-- </div> -->
                 </div>
             </section>
             <hr class="m-0" />
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h2 class="mb-0">About</h2>
+                    <div class="subheading mb-5"></div>
+                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreamings. He has a Bachelor in music and a Master in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
+                </div>     
+            </section>
             <!-- Experience-->
             <!-- <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -97,7 +105,7 @@
             </section> -->
             <hr class="m-0" />
             <!-- Education-->
-            <section class="resume-section" id="education">
+            <!-- <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -105,7 +113,7 @@
                             <h3 class="mb-0">M.Mus in Sound Recording</h3>
                             <div class="subheading mb-3">McGill University, Montreal, QC, Canada</div>
                             <div>Master's in audio recording and production with a focus on classical music.</div>
-                            <!-- <p>GPA: 3.23</p> -->
+  
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2017 - May 2019</span></div>
                     </div>
@@ -113,68 +121,18 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">B.Mus in Jazz Guitar</h3>
                             <div class="subheading mb-3">McGill University, Montreal, QC, Canada</div>
-                            <div>Bachelor's in music, guitar performance with a focus on jazz.</div>
+                            <div>Bachelor's in music, guitar performance with a focus on jazz music and guitar.</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2013 - May 2017</span></div>
                     </div>
                 </div>
             </section>
-            <hr class="m-0" />
-            <!-- Bio-->
-            <!-- <section class="resume-section" id="bio">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" /> -->
-            <!-- Interests-->
-            <!-- <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
             <hr class="m-0" /> -->
             <!-- Contact-->
-            <section class="resume-section" id="contact">
+            <section style="text-align: center;" class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact Me</h2>
-                    <div>
+                    <div style="font-size:1.25rem;">
                         <a href="mailto:name@email.com">colebarbour@gmail.com</a>
                         <p><br/>(207) 975-1516
                         </p>
