--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section style="text-align: center;" class="resume-section" id="intro">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Cole W.
-                        <span class="text-primary">Barbour</span>
+                        Cole W. Barbour
+                        <!-- <span class="text-primary"></span> -->
                     </h1>
                     <div class="subheading mb-5" style="font-size:2.5rem">
                         Audio & Video
