--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Cole Barbour | Audio & Video</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Cole Barbour</span>
+                <span class="d-block d-lg-none">CWB Audio & Video</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Cole_Profile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -62,7 +62,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-0">About</h2>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreamings. He has a Bachelor in music and a Master in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
+                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor in music and a Master in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
                 </div>     
             </section>
             <!-- Experience-->
