--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">CWB Audio & Video</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Cole_Profile.jpg" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Profile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -63,8 +63,51 @@
                     <h2 class="mb-0">About</h2>
                     <div class="subheading mb-5"></div>
                     <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor in music and a Master in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
-                </div>     
+                    <!--Photo Slideshow-->
+                    <div class="row-cols-2"><div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="6" class="active"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="assets/img/Livestream.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/img/ColeBarbour.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/img/Cameras.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/img/Action.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/img/Lights.jpg" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/img/Hall.jpg" alt="">
+                        </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                        </a>
+                    </div></div>
+                </div>  
+   
             </section>
+
+         
             <!-- Experience-->
             <!-- <section class="resume-section" id="experience">
                 <div class="resume-section-content">
