--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                                 <img class="d-block w-100" src="assets/img/Action.jpg" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/img/Lights.jpg" alt="">
+                                <img class="d-block w-100" style="height:400px;" src="assets/img/Lights.jpg" alt="">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/img/Hall.jpg" alt="">
+                                <img class="d-block w-100" style="height:400px;" src="assets/img/Hall.jpg" alt="">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -101,7 +101,7 @@
                         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
-                        </a>
+                        </a>                  
                     </div>
                 </div>
                 </div>  
