--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">CWB Audio & Video</span>
+                <span class="d-block d-lg-none">Barbour Audio & Video</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Profile.jpg" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,7 +40,7 @@
             <section style="text-align: center;" class="resume-section" id="intro">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Cole W. Barbour
+                        Cole Barbour
                         <!-- <span class="text-primary"></span> -->
                     </h1>
                     <div class="subheading mb-5" style="font-size:2.5rem">
