--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <section class="resume-section" id="about">
+            <section class="resume-section-about" id="about">
                 <div class="resume-section-content">
                     <h2 class="mb-0">About</h2>
                     <div class="subheading mb-5"></div>
