--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Barbour Audio & Video</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Profile.jpg" alt="" /></span>
+                <!-- <span class="d-none d-lg-block"><img class="img-fluid img-profile mx-auto mb-1" src="assets/img/Profile.jpg" alt="" /></span> -->
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">Home</a></li> -->
+
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#intro">Intro</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li> 
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
@@ -35,15 +36,18 @@
             </div>
         </nav>
         <!-- Page Content-->
+        <!-- <section class="masthead"id="home">
         <div class="container-fluid p-0">
+           <section> <img class="masthead" src="assets/img/Cole_FrontPage.png" >
+           </section> -->
             <!-- Intro-->
             <section style="text-align: center;" class="resume-section" id="intro">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">
+                    <h1 class="slidein-left mb-0">
                         Cole Barbour
                         <!-- <span class="text-primary"></span> -->
                     </h1>
-                    <div class="subheading mb-5" style="font-size:2.5rem">
+                    <div class="subheading slidein-right mb-5" style="font-size:2.5rem">
                         Audio & Video
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
@@ -62,7 +66,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-0">About</h2>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer and experienced video producer located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor in music and a Master in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
+                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer, experienced video producer and musician located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor of music and a Master of music in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
                     <!--Photo Slideshow-->
                     <div class="row-cols-2">
                         <div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
@@ -75,9 +79,6 @@
                             </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="assets/img/Livestream.jpg" alt="">
-                            </div>
-                            <div class="carousel-item">
                                 <img class="d-block w-100" src="assets/img/ColeBarbour.jpg" alt="">
                             </div>
                             <div class="carousel-item">
@@ -85,6 +86,9 @@
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" style="height:360px;" src="assets/img/Lights.jpg" alt="">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/img/Livestream.jpg" alt="">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" style="height:360px;" src="assets/img/Hall.jpg" alt="">
