--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Audio & Video
                         <!-- <a href="mailto:name@email.com">name@email.com</a> -->
                     </div>
-                    <p class="lead mb-5">Professional audio and video production<br/>High-quality recording, editing and livestreaming services</p>
+                    <p class="lead sildein-bottom mb-5">Professional audio and video production<br/>High-quality recording, editing and livestreaming services</p>
                <!-- <div class="social-icons"> -->
                         <!-- <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
@@ -64,11 +64,16 @@
             <hr class="m-0" />
             <section class="resume-section-about" id="about">
                 <div class="resume-section-content">
-                    <h2 class="mb-0">About</h2>
+                    <h2 class="mb-3">About</h2>
                     <div class="subheading mb-5"></div>
-                    <p class="lead mb-5"> Cole Barbour is an award-winning sound engineer, experienced video producer and musician located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor of music and a Master of music in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
+                        <div class="row">
+                        <img class="img col-lg-5 mx-lg-4" src="assets/img/Profile.jpg">
+                        <p class="lead col-lg-5 mx-lg-3"> Cole Barbour is an award-winning sound engineer, experienced video producer and musician located in Boston, MA. He creates a wide variety of high quality audio and video products ranging from album recordings to concert livestreams. He has a Bachelor of music and a Master of music in sound recording from McGill University, Montreal, Canada. Mr. Barbour works as an assistant audio engineer for the Boston Symphony Orchestra and is an active video producer in Boston, working with clients such as the Harvard Music Association and the Boston Artists Ensemble.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-5">Text</div>
                     <!--Photo Slideshow-->
-                    <div class="row-cols-2">
+                    <div class="col-lg-7">
                         <div id="carouselExampleIndicators" class="carousel slide container" data-ride="carousel">
                             <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -103,6 +108,7 @@
                             <span class="sr-only">Next</span>
                         </a>                  
                     </div>
+                </div>
                 </div>
                 </div>  
    
